removed placeholder logo

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -271,7 +271,7 @@ header.navbar .navbar-inner {
 header #logo {
     width: 220px;
     height: 80px;
-    background: url(../images/logo2.png) no-repeat 0 50%;
+    background: url(../images/logo.png) no-repeat 0 50%;
 }
 
 header.navbar {
