use https for css

--- a/source/css/main.less
+++ b/source/css/main.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Fjalla+One);
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
 @import 'variables';
 @import 'mixins';
 
@@ -89,7 +89,7 @@ body{
 			color: #2dcc70;
 			text-shadow: none;
 		}
-	}  
+	}
 }
 
 #clients{
@@ -496,8 +496,8 @@ ul {
 		li::before {
 			margin-right:5px;
 		}
-	}	
-	
+	}
+
 	&.arrow{
 		li::before {
 			content:"\f105";
@@ -532,7 +532,7 @@ ul {
 			content:"\f09e";
 		}
 	}
-}	
+}
 
 #footer{
 	background: #333;
@@ -595,7 +595,7 @@ ul.social{
 	.accordion-toggle{
 		color:#666;
 		font-weight: 700;
-	}	
+	}
 }
 .accordion-inner{
 	border-top: 0;
@@ -701,7 +701,7 @@ textarea#message{
 				}
 				&.day{
 					font-size: 18px;
-					line-height: 18px;					
+					line-height: 18px;
 				}
 			}
 		}
@@ -815,7 +815,7 @@ ul.gallery li .preview {
 			font-size: 18px;
 			margin: 0 1px;
 		}
-	}  
+	}
 }
 ul.gallery li .preview {
 	&:hover{
